<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/dark_orange"
        android:backgroundTint="@color/dark_orange"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_preview_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon_preview"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="@color/dark_orange"
            android:contentDescription="@string/icon"
            app:srcCompat="@drawable/home_w" />

        <TextView
            android:id="@+id/textView_preview_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:backgroundTint="@color/dark_orange"
            android:gravity="center_vertical"
            android:text="@string/title"
            android:textColor="@color/light_gray"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_preview_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_preview_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_preview_top"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25sp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView_preview_description_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/description"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_preview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/no_description"
                android:textSize="18sp"
                android:textStyle="italic"
                android:paddingHorizontal="20sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView_preview_deadline_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/deadline"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_preview_deadline"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/date"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView_preview_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/notification_disabled"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <TextView
                android:id="@+id/textView_preview_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/priority"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/rating_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_preview_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="65dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/light_orange"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_preview_bottom">

        <Button
            android:id="@+id/button_preview_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/light_orange"
            android:onClick="back"
            android:text="@string/back" />

        <Button
            android:id="@+id/button_preview_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/light_orange"
            android:onClick="tryDelete"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button_preview_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/light_orange"
            android:onClick="editTask"
            android:text="@string/edit" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>