<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_edit_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/dark_orange"
        android:gravity="center"
        android:text="@string/edit_task"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_edit_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_edit_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="65dp" />

    <ScrollView
        android:id="@+id/scrollView_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_edit_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_edit_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25sp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <EditText
                android:id="@+id/editText_edit_title"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:autofillHints=""
                android:background="@drawable/light_orange_border"
                android:hint="@string/title"
                android:inputType="text"
                android:padding="10dp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <EditText
                android:id="@+id/editText_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:autofillHints=""
                android:background="@drawable/light_orange_border"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minLines="6"
                android:padding="10dp"
                android:scrollbars="vertical" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView_edit_deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/deadline"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_edit_date"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/light_orange"
                    android:gravity="center"
                    android:onClick="chooseDate"
                    android:text="@string/date"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.02" />

                <Button
                    android:id="@+id/button_edit_time"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.5"
                    android:backgroundTint="@color/light_orange"
                    android:gravity="center"
                    android:onClick="chooseTime"
                    android:text="@string/time"
                    android:textSize="18sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView_edit_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/notification"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.05" />

                <com.rm.rmswitch.RMSwitch
                    android:id="@+id/switch_edit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    app:checked="false"
                    app:enabled="true"
                    app:forceAspectRatio="true"
                    app:switchBkgCheckedColor="@color/dark_orange"
                    app:switchBkgNotCheckedColor="@color/white"
                    app:switchDesign="large"
                    app:switchToggleCheckedColor="@color/gray"
                    app:switchToggleNotCheckedColor="@color/dark_orange" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15" />

                <Button
                    android:id="@+id/button_edit_notification"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.6"
                    android:backgroundTint="@color/light_orange"
                    android:enabled="false"
                    android:gravity="center"
                    android:onClick="callNotificationSettings"
                    android:text="@string/choose"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView_edit_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/task_type"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/icon_edit_old"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.3"
                    app:srcCompat="@drawable/home" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1" />

                <Button
                    android:id="@+id/button_edit_icon"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="0.6"
                    android:backgroundTint="@color/light_orange"
                    android:gravity="center"
                    android:onClick="changeIcon"
                    android:text="@string/change_type"
                    android:textSize="18sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView_edit_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15sp"
                android:text="@string/priority"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="17sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/rating_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_edit_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="65dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/light_orange"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_edit_bottom">

        <Button
            android:id="@+id/button_edit_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/light_orange"
            android:onClick="declineChanges"
            android:text="@string/decline" />

        <Button
            android:id="@+id/button_edit_save"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/light_orange"
            android:onClick="acceptChanges"
            android:text="@string/save" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>